--- a/front/src/app/modules/blueprint/pages/build-stack/build-stack.component.scss
+++ b/front/src/app/modules/blueprint/pages/build-stack/build-stack.component.scss
@@ -238,3 +238,7 @@
         display: none;
     }
 }
+/* Custom style fix for overflow nodeDetails component */
+::ng-deep .node-details-custom-wrapper .mat-dialog-container {
+    padding-bottom: 0;
+}
